frontend/src/assets/styles/cmps/util/ActionsModal.scss
.checkbox-actions {
     z-index: 5;
     @include for-narrow-layout {
          z-index: 10;
     }
     @include for-normal-layout {
          z-index: 5;
          min-width: 600px;
     }
     @include for-wide-layout {
          min-width: 800px;
     }
     position: fixed;
     translate: -50% -50%;
     left: 50%;
     bottom: 25%;
     height: 63px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
     pointer-events: auto;
     bottom: 35px;
     -webkit-user-select: none;
     user-select: none;
     display: grid;
     grid-auto-flow: row;
     grid-template-columns: auto 1fr auto auto auto;
     align-items: center;
     column-gap: 20px;   
     > * {
          height: 100%;
     }
     .num-of-actions {
          @include flex-center;
          width: 63px;
          color: #fff;
          background-color: #0073ea;
          border-radius: 5px 0px 0px 5px;
          text-align: center;
          cursor: default;
          font-size: 30px;
     }
     .num-of-tasks-colors {
          display: flex;
          justify-content: start;
          align-items: center;
          gap: 5px;
          min-width: 144px;
          height: 20px;
          .num-of-tasks-color {
               border-radius: 50%;
               width: 8px;
               height: 8px;
          }
     }
     .title-of-actions {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          max-width: 160px;
          font-size: 24px;
     }
     .action-item {
          @include flex-center;
          flex-direction: column;
          cursor: pointer;

          &:hover svg {
               color: #0073ea;
          }
     }
     .exit-actions {
          display: flex;
          width: 63px;
          cursor: pointer;
          text-align: center;
          flex-direction: column;
          justify-content: center;
          text-align: center;
          border-left: 2px solid;
          border-left-color: #c3c6d4;
          .close-btn {
               height: 15px;
               width: 15px;
          }
          &:hover svg {
               color: #0073ea;
          }
     }
}

